# wagtail-react-seo

./: .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
wagtail_react_seo/: wsgi.py
wagtail_react_seo/settings/: base.py  dev.py
wagtail_react_seo/templates/: base.html
website/: models.py  wagtail_hooks.py
website/migrations/: 0001_initial.py  0002_category_description_product_description.py
website/templates/website/: catalog_page.html
